package com.wzy.template.advance;

//纯豆浆不加任何配料，这里仍然使用父类添加配料的 空方法
public class PureSoyMilk extends SoyMilk{

//    @Override
//    void addCondiments(){
//        super.addCondiments();
//    }

}
